Impl [igzNumberInput] Refactor: improvements, cleanup, docs
- Do not have double focus on this component on sequential keyboard
  navigation (via the TAB key).
- `itemBlurCallback`: added `event` and `inputValue` arguments on
  invocation.
- `itemFocusCallback`: added `event` argument on invocation.
- Added JSDoc.
- Moved `igzValidateElevation` directive from Iguazio dashboard repo to
  this repo because `igzNumberInput` uses it.

--- a/src/igz_controls/components/number-input/number-input.less
+++ b/src/igz_controls/components/number-input/number-input.less
@@ -25,7 +25,7 @@
             outline: none;
         }
 
-        &:focus, &.focused {
+        &:focus-within, &.focused {
             outline: 0;
             border: @number-input-not-disabled-hover-focus-border;
         }
@@ -119,6 +119,7 @@
             cursor: pointer;
             display: block;
             line-height: 11px;
+            outline: 0;
 
             &:hover {
                 color: @number-input-arrow-block-icon-hover-color;
