--- a/src/igz_controls/components/action-item/action-item-more/action-item-more.tpl.html
+++ b/src/igz_controls/components/action-item/action-item-more/action-item-more.tpl.html
@@ -1,12 +1,12 @@
 <div class="igz-action-item"
-     data-ng-class="{'subtemplate-show': $ctrl.isDropdownShown}">
+     data-ng-class="{'subtemplate-show': $ctrl.isDropdownShown}"
+     data-ng-click="$ctrl.toggleTemplate()">
 
     <div data-uib-tooltip="{{ 'common:MORE_OPTIONS' | i18next }}"
          data-tooltip-popup-delay="1000"
          data-tooltip-placement="bottom">
 
-        <div class="action-icon igz-icon-context-menu"
-             data-ng-click="$ctrl.toggleTemplate()"></div>
+        <div class="action-icon igz-icon-context-menu"></div>
     </div>
 
     <div class="item-dropdown-menu igz-component" data-ng-show="$ctrl.isDropdownShown">
