--- a/src/nuclio/common/components/function-config-dialog/function-config-dialog.tpl.html
+++ b/src/nuclio/common/components/function-config-dialog/function-config-dialog.tpl.html
@@ -8,7 +8,7 @@
         <ncl-monaco class="monaco-code-editor"
                     data-function-source-code="$ctrl.sourceCode"
                     data-mini-monaco="false"
-                    data-selected-theme="$ctrl.editorTheme"
+                    data-selected-theme="'vs-light'"
                     data-language="'yaml'"
                     data-read-only="true">
         </ncl-monaco>
